# cudaGITActions

./: CMakeLists.txt
.github/workflows/: build.yml
src/: CMakelists.txt  kernel.cu
